--- a/archivos.css
+++ b/archivos.css
@@ -1,15 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
 nav{
     background-color: rgb(222, 83, 83);
+}
+.navbar a span{
+    color: #000;
+    font-size: 45px;
+    text-shadow: 0px 0px 5px #333;
+    font-family:"Dancing Script", cursive;
+
 }
 .barra ul li{
     list-style: none;
     display: inline;
     padding: 0px 5px;
+    border: 10px;
 }
-.barra a{
+.barra ul li a{
     text-decoration: none;
     color: black;
+    font-size: 20px
 }
 .barra a:hover{
     color: #333;
@@ -33,6 +43,7 @@ main{
 h1{
     color: rgb(0, 0, 0);
     text-shadow: 0 0 5px #333;
+    font-family:"Dancing Script", cursive;
 }
 .burbuja p{
     font-size: 20px;
@@ -50,11 +61,18 @@ h1{
 }
 h2{
     text-align: center;
-    background-color: springgreen;
     padding: 20px;
     color: #fff;
     text-shadow: 0 0 5px #000;
     font-size: 35px;
+    text-align: center;
+    background-color: #b22222ab;
+    color: white;
+    padding: 30px;
+    font-size: 25px;
+    font: bolder;
+    margin: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 .nuestro{
     display: flex;
@@ -76,12 +94,6 @@ h2{
     font-size: 15px;
     text-align: right;
 }
-h2{
-    text-align: center;
-    background-color: #b22222ab;
-    color: white;
-    padding: 30px;
-}
 .img1{
     background-image: url(media/persona.jpg);
     background-position: center;
@@ -91,14 +103,17 @@ h2{
 .card-body{
     background-color: #b22222ab;
 }
-h2{
-    font-size: 25px;
-    font: bolder;
-    margin: 5px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+.card-img-top{
+    width: 603px;
+    height: 450px;
+}
+.card-title{
+    font-family:"Dancing Script", cursive;
+    font-size: 50px;
 }
 footer{
     background-color: black;
     color: white;
     text-align: center;
+    padding-bottom: 50px;
 }
