--- a/archivos.css
+++ b/archivos.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color:  rgba(131, 52, 52, 0.747);
+}
 nav{
     background-color: rgb(222, 83, 83);
 }
 .navbar a span{
     color: #000;
-    font-size: 45px;
+    font-size: 30px;
     text-shadow: 0px 0px 5px #333;
     font-family:"Dancing Script", cursive;
 
@@ -26,9 +34,9 @@ nav{
 }
 main{
     background-image: url(media/recepcion.jpg);
-    height: 650px;
     background-size: cover;
-    color: white;
+    background-position: center;
+    height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,9 +44,9 @@ main{
 .burbuja{
     width: 80%;
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 20px;
     border: 5px solid  rgba(178, 34, 34, 0.669);
     border-radius: 7px;
+    padding-bottom: 20px;
 }
 h1{
     color: rgb(0, 0, 0);
@@ -68,11 +76,12 @@ h2{
     text-align: center;
     background-color: #b22222ab;
     color: white;
-    padding: 30px;
     font-size: 25px;
     font: bolder;
-    margin: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+h3{
+    padding-bottom: 100px;
 }
 .nuestro{
     display: flex;
@@ -94,18 +103,20 @@ h2{
     font-size: 15px;
     text-align: right;
 }
-.img1{
-    background-image: url(media/persona.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 600px;
+.product{
+    padding: 80px 0;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+}
+.card div img{
+    width: 250px;
+    height: 250px;
+    margin-bottom: 20px;
 }
 .card-body{
     background-color: #b22222ab;
-}
-.card-img-top{
-    width: 603px;
-    height: 450px;
 }
 .card-title{
     font-family:"Dancing Script", cursive;
@@ -115,5 +126,5 @@ footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding-bottom: 50px;
+    padding: 50px;
 }
